# eudaq

./: CMakeLists.txt  mySTARTRUN  setup_eudaq_ROOT6.sh
main/lib/: CMakeLists.txt
main/lib/src/: DataConverterPlugin.cc  Timepix3ConverterPlugin.cc  TimepixConverterPlugin.cc
nreader/detdescription/: EUTelTimepix3Detector.cc
nreader/include/: EUTelTimepix3Detector.h
producers/: CMakeLists.txt
producers/TimepixProducer/: CMakeLists.txt  Makefile
producers/TimepixProducer/src/: MIMTLU.cc  TimepixProducer.cxx
producers/timepix3/include/: Timepix3Config.h
producers/timepix3/src/: Timepix3Config.cxx  Timepix3Producer.cxx
producers/tlu/src/: TLUController.cc  TLUProducer.cxx
